
Fixed bug in ranimate that caused it to fail in continuation of renderings.

Renamed librt.a to librtrad.a, to avoid conflict on Solaris. Almost
everything now gets linked to -lrtrad instead of -lrt.

Fixed problem with large sample sets, so -u+ option now is truly random.
Thanks to Rick Mistrick and Younju Yoon for identifying this problem,
which was related to a poorly designed hash function.

Changed -u+ to be the default setting in rtrace (only).

Fixed binary i/o for rlam and vwrays under Windows.

Added tmCvLums() to tone-mapping routines using a 16-bit lookup table
on IEEE floats, which is also used to improve speed of COLOR conversions,
especially on machines with slow log() calls.  The first call to
tmCvLums(), tmCvGrays(), or tmCvColors() initializes the table.

Created optics2rad.csh script to convert from Optics 5 material output
to something correct for Radiance.  Built on old glazing.cal function,
which is actually incorrect so removed from the distribution.

Fixed nuisance bug in ximage under some SGI machines that caused it to
choose an inappropriate visual and display incorrect colors.  (Thanks
to Oskar Itzinger for debugging the problem.)

Fixed long-standing inaccuracy of pcompos -t and +t thresholding options.

Fixed bug in handling of views with tabs rather than spaces.

Fixed bug related to alias of alias.

****** COMPATIBILITY CHANGE ********
Changed default sky turbidity in gensky from the original default of
2.75 to the CIE 110-1994 standard value of 2.45.  Thanks to Marilyne
Anderson of MIT for pointing out this discrepancy.

Added -o option to ra_xyze to produce original pixel values.

Fixed bug in tracing of virtual sources, where intervening glazing was
not being accounted for properly.

Added -h option to pcompos and pcomb to eliminate verbose headers.

=====================
Version 3.9

Added -spec option to falsecolor to restore original spectral color scale.
Also added "-s auto" option to automatically set the maximum value.